Prevent the board from overlapping with the message when rotating

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -80,6 +80,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    z-index: 0;
     @include breakpoint(medium, max) {
         margin-top: auto;
         &__button {
